...
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/colorCardDefault"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filter_menu_popup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:animateLayoutChanges="true"
            android:visibility="gone"
...
                <TextView
                    android:id="@+id/hint_button_any"
                    style="@style/SecondaryTextHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_menu_pickup_any"
                    app:layout_constraintBottom_toTopOf="@+id/pickup_any_button"
                    app:layout_constraintEnd_toEndOf="@+id/pickup_any_button"
                    app:layout_constraintStart_toStartOf="@+id/pickup_any_button" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/pickup_any_button"
                    android:layout_width="50dp"
...
                <TextView
                    android:id="@+id/hint_button_in_person"
                    style="@style/SecondaryTextHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_menu_pickup_in_person"
                    app:layout_constraintBottom_toTopOf="@+id/pickup_in_person_button"
                    app:layout_constraintEnd_toEndOf="@+id/pickup_in_person_button"
                    app:layout_constraintStart_toStartOf="@+id/pickup_in_person_button" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/pickup_in_person_button"
                    android:layout_width="50dp"
...
                <TextView
                    android:id="@+id/hint_button_giveaway"
                    style="@style/SecondaryTextHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_menu_pickup_giveaway"
                    app:layout_constraintBottom_toTopOf="@+id/pickup_giveaway_button"
                    app:layout_constraintEnd_toEndOf="@+id/pickup_giveaway_button"
                    app:layout_constraintStart_toStartOf="@+id/pickup_giveaway_button" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/pickup_giveaway_button"
                    android:layout_width="50dp"
...
                <TextView
                    android:id="@+id/hint_button_race"
                    style="@style/SecondaryTextHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_menu_pickup_race"
                    app:layout_constraintBottom_toTopOf="@+id/pickup_race_button"
                    app:layout_constraintEnd_toEndOf="@+id/pickup_race_button"
                    app:layout_constraintStart_toStartOf="@+id/pickup_race_button" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/pickup_race_button"
                    android:layout_width="50dp"
...
