<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/taker_feed_card"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:clickable="true"
            android:focusable="true"
            card_view:cardElevation="1dp"
            card_view:cardMaxElevation="8dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_title"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_above="@+id/item_photo"
                    android:layout_alignEnd="@+id/item_favorite"
                    android:layout_alignRight="@+id/item_favorite"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="16sp"
                    app:autoSizeMinTextSize="12sp"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toTopOf="@+id/item_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintStart_toEndOf="@+id/item_favorite" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/item_photo"
                    android:layout_width="match_parent"
                    android:layout_height="168dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/round_feed_picture_frame"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/item_favorite"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="4dp"
                    android:alpha="0"
                    android:src="@drawable/ic_favorite"
                    android:visibility="gone"
                    app:elevation="4dp"
                    card_view:layout_constraintBottom_toBottomOf="@+id/item_title"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:id="@+id/item_publisher_frame"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/item_photo">

                    <ImageView
                        android:id="@+id/item_publisher_profile"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitXY" />
                </FrameLayout>

                <TextView
                    android:id="@+id/item_published_name"
                    android:layout_width="192dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:maxLines="1"
                    android:text=""
                    android:textSize="14sp"
                    android:textAlignment="viewStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/item_publisher_frame"
                    app:layout_constraintTop_toBottomOf="@+id/item_photo" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/item_category"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:alpha="0.6"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_pizza_slice_purple"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/item_photo" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/item_pickup_method"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginRight="14dp"
                    android:alpha="0.6"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_giveaway_purple"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/item_category"
                    app:layout_constraintTop_toBottomOf="@+id/item_photo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


</LinearLayout>