...
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pick-Up Menu</string>
    <string name="nav_header_subtitle">Search for items that suit your needs</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_show_all_title">Show All</string>
    <string name="nav_filter_title">Filter</string>
    <string name="nav_food_title">Food</string>
    <string name="nav_study_material_title">Study Material</string>
    <string name="nav_furniture_title">Households</string>
    <string name="nav_lost_and_found_title">Lost &amp; Found</string>
    <string name="nav_hitchhike_title">Hitchhiking</string>
    <string name="nav_other">Other</string>
...

    <!--Taker activity AppBar elements-->
    <string name="title_activity_taker_menu">TakeCare</string>
    <string name="action_switch_to_map">Map Display</string>
    <string name="action_switch_to_list">List Display</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_chat">Chat</string>
    <string name="action_user_settings">User Settings</string>
    <string name="action_my_items">My Items</string>
    <string name="action_requested_items">Requested Items</string>
    <string name="action_favorites">Favorites</string>

...
